# OpenCVProjects

./: CMakeCache.txt  CMakeLists.txt  blobs.cpp  ccode  ccode.c  colorDetectController.h  colorDetection.cpp  colorReduce.cpp  colordetector.h  colorhistogram.h  contentFinder.h  contentfinder.cpp  contours.cpp  controller.cpp  derivatives.cpp  display_img  display_img.c  edgedetector.h  filters.cpp  finder.cpp  harrisDetector.h  histogram.h  histograms.cpp  huesaturation.cpp  imagecomparator.h  integral.cpp  integral.h  interestPoints.cpp  kernelsharpen.cpp  laplaceZC.h  linefinder.h  matstruct.cpp  morphology.cpp  mserFeatures.cpp  mserFeatures.h  region.cpp  retrieve.cpp  salt.cpp  segment.cpp  sharpen.cpp  (+7 more)
